--- a/index.html
+++ b/index.html
@@ -216,6 +216,10 @@
       <section>
         <h2>Deploying code changes</h2>
           <p>To change this application, update your code and rebuild/redeploy the image.</p>
+        <ul>
+        <li><a href="text1.html">Text1</a></li>
+        <li><a href="text2.html">Text2</a></li>
+      </ul>
       </section>
     </section>
     <section class="col-xs-12 col-sm-6 col-md-6">
